--- a/sandyd/entitlements.plist
+++ b/sandyd/entitlements.plist
@@ -5,5 +5,9 @@
     <true/>
     <key>com.apple.private.security.container-required</key>
     <false/>
+    <key>com.apple.private.security.storage.AppBundles</key>
+    <true/>
+    <key>com.apple.private.security.storage.AppDataContainers</key>
+    <true/>
 </dict>
 </plist>
